--- a/CSharpProgrammingLogic.App/CSharpProgrammingLogic.App.csproj
+++ b/CSharpProgrammingLogic.App/CSharpProgrammingLogic.App.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <StartupObject>CSharpProgammingLogic.App.Program</StartupObject>
+    <StartupObject>CSharpProgrammingLogic.App.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
